syntax = "proto3";
package io.carbynestack.castor.common.grpc;

option java_multiple_files = true;

message GrpcEmpty{

}